# ipipe

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: fifo_unix.rs  fifo_windows.rs  handle.rs  lib.rs  pipe_unix.rs  pipe_windows.rs  static_pipe.rs  tests.rs
tests/: buf_read.rs  duplex.rs  test_in
