[package]
name = "ipipe"
version = "0.1.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Griffin O'Neill <gsoneill1003@gmail.com>"]
edition = "2018"
description = """
Cross-platform named-pipe API.
"""
keywords = ["pipe", "ipc", "fifo"]
homepage = "https://github.com/Eolu/ipipe"
repository = "https://github.com/Eolu/ipipe"
categories = ["filesystem", "os::unix-apis", "os::windows-apis", "api-bindings"]
documentation = "https://docs.rs/ipipe"

[dependencies]
rand = "0.5"

[target.'cfg(unix)'.dependencies]
nix = "0.19"

[target.'cfg(windows)'.dependencies]
windows-named-pipe = "0.1"
