[package]
name = "ipipe"
version = "0.2.3"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Griffin O'Neill <gsoneill1003@gmail.com>"]
edition = "2018"
description = """
Cross-platform named-pipe API.
"""
keywords = ["pipe", "ipc", "fifo"]
homepage = "https://github.com/Eolu/ipipe"
repository = "https://github.com/Eolu/ipipe"
categories = ["filesystem", "os::unix-apis", "os::windows-apis", "api-bindings"]
documentation = "https://docs.rs/ipipe"

[features]
static_pipe = ["lazy_static", "dashmap"]

[dependencies]
rand = "0.5"
lazy_static = { version = "1.4", optional = true }
dashmap = { version = "4.0", optional = true }

[target.'cfg(unix)'.dependencies]
nix = "0.19"

[target.'cfg(windows)'.dependencies]
windows-named-pipe = "0.1"
