[package]
name = "ipipe"
version = "0.7.2"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Griffin O'Neill <gsoneill1003@gmail.com>"]
edition = "2018"
description = """
Cross-platform named-pipe API.
"""
keywords = ["pipe", "ipc", "fifo"]
homepage = "https://github.com/Eolu/ipipe"
repository = "https://github.com/Eolu/ipipe"
categories = ["filesystem", "os::unix-apis", "os::windows-apis", "api-bindings"]
documentation = "https://docs.rs/ipipe"

[features]
default = ["static_pipe", "rand"]
static_pipe = ["lazy_static", "dashmap"]

[dependencies]
rand = { version = "0.5", optional = true }
lazy_static = { version = "1.4", optional = true }
dashmap = { version = "4.0", optional = true }

[target.'cfg(unix)'.dependencies]
nix = "0.19"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winerror", "winbase", "handleapi", "fileapi", "namedpipeapi"]}
